syntax = "proto3";

package echo;

service Echo {
  rpc Echo (EchoRequest) returns (EchoResponse) {}
  rpc EchoReverse (EchoReverseRequest) returns (EchoReverseResponse) {}
}

message EchoRequest {
  string body = 1;
}

message EchoResponse {
  string body = 1;
}

message EchoReverseRequest {
  string body = 1;
}

message EchoReverseResponse {
  string body = 1;
}
